# git-ce

./: .gitignore  Cargo.toml  Justfile  LICENSE  LICENSE-HISTORY.md  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: build_and_release.yml  cachix.yml  flake-update.yml  flakehub-publish-tagged.yml
src/: main.rs
