[package]
name = "git-ce"
version = "0.4.1"
edition = "2021"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.20.0", default-features = false }
clap = { version = "4.5", features = ["cargo"] }
inquire = "0.7.5"

[dev-dependencies]
tempfile = "3.14.0"
