[package]
name = "git-ce"
version = "0.4.3"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.20.0", default-features = false }
clap = { version = "4.5", features = ["cargo", "derive"] }
inquire = "0.7.5"
rig-core = "0.13.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
